# Metropolis-Light-Transport-Implementation

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
media/: bunny_plane_light.glb  cornellbox_glass_plane_light.glb  cornellbox_metal_plane_light.glb  cornellbox_plane_light.glb  cornellbox_point_light.glb  cornellbox_spheres_indirect.glb  cornellbox_spheres_metal_glass_plane_light.glb  cornellbox_spheres_plane_light.glb  cornellbox_spheres_point_light.glb  glass_test.glb
src/: aabb.cpp  aabb.h  aabb4.cpp  aabb4.h  application.cpp  application.h  bvh.cpp  bvh.h  distribution_geometric_clipped.h  image.cpp  image.h  main.cpp  material.cpp  material.h  math.h  mesh.cpp  mesh.h  mlt.cpp  mlt.h  path.cpp  path.h  path_tracer.cpp  path_tracer.h  random.cpp  random.h  ray.h  renderer.h  scene.cpp  scene.h  threadpool.cpp  threadpool.h  types.h
